# hisi_tde

./: CMakeLists.txt  Reade.md  demo.cpp  main.cpp
hisisdk/include/: acodec.h  hi_avs_position_query.h  hi_comm_adec.h  hi_comm_aenc.h  hi_comm_aio.h  hi_comm_dpu_match.h  hi_comm_dpu_rect.h  hi_comm_ive.h  hi_comm_pciv.h  hi_comm_venc.h  hi_dsp.h  hi_ive.h  hi_mcc_usrdev.h  hi_md.h  hi_nnie.h  hi_resampler_api.h  hi_tde_type.h  ivs_md.h  mpi_dsp.h  mpi_ive.h  mpi_pciv.h
include/: common.h  mmz_resize.h
opencv/include/opencv4/opencv2/: cvconfig.h
opencv/lib/: libopencv_calib3d.so.4.1.0  libopencv_core.so.4.1.0  libopencv_features2d.so.4.1.0  libopencv_flann.so.4.1.0  libopencv_gapi.so.4.1.0  libopencv_highgui.so.4.1.0  libopencv_imgcodecs.so.4.1.0  libopencv_imgproc.so.4.1.0  libopencv_ml.so.4.1.0  libopencv_objdetect.so.4.1.0  libopencv_photo.so.4.1.0  libopencv_stitching.so.4.1.0  libopencv_video.so.4.1.0  libopencv_videoio.so.4.1.0
opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
src/: mmz_resize.cpp
